[package]
name = "protozoa"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/kaorlol/protozoa"
description = "A scraper for various anime websites"
license = "MIT"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
protozoa-cryptography = "0.1.2"
anyhow = "1.0.96"
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
kuchikiki = "0.8.6-speedreader"
serde_json = "1.0.139"