[package]
name = "protozoa"
version = "0.1.14"
edition = "2021"
repository = "https://github.com/kaorlol/protozoa"
description = "A scraper for various anime websites"
license = "MIT"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
protozoa-cryptography = "0.1.3"
anyhow = "1.0.97"
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
kuchikiki = "0.8.2"
serde_json = "1.0.140"
