[package]
name = "protozoa-cryptography"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kaorlol/protozoa/tree/main/protozoa-cryptography"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
base64 = "0.22.1"
urlencoding = "2.1.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["macros"] }
rustyscript = "0.11.0"
anyhow = "1.0.96"
aes = "0.8.3"
md5 = "0.7.0"
cbc = "0.1.2"